--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express"
   ],
   "author": "James Wright <james.wright@net-a-porter.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "mocha": "^2.3.4"
+  }
 }
